--- a/TeoriaJavascript/index.html
+++ b/TeoriaJavascript/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Estudiando Entrevistas</h1>
-    <script src="./Apis/apis.js"></script>
+    <script src="./Arrays/DesestructuracionArr/desestrucArr.js"></script>
 </body>
 </html>
